cabal-version:      2.4
name:               Hangman
version:            1.0.0.0

-- A short (one-line) description of the package.
synopsis: Hangman Game

-- A longer description of the package.
description: Simple Hangman game written in Haskell. Supports user input word, or word selected at random from text file.

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license: MIT

-- The package author(s).
author: Ciaran

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

extra-source-files: CHANGELOG.md

executable Hangman
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      ansi-terminal,
                      directory,
                      mtl,
                      random,
                      transformers
    hs-source-dirs:   app
    default-language: Haskell2010
